<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context="com.flowcharts.kolas.labs_tpcs.MainActivity">


    <LinearLayout
        android:id="@+id/bar"
        style="@style/MyCustomThemeEat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2efe17"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/save"
                    android:onClick="onClick"
                    android:text="@string/save_file"/>

                <Button
                    android:id="@+id/open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/open"
                    android:onClick="onClick"
                    android:text="Open"/>

                <Button
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/error"
                    android:onClick="onClick"
                    android:text="@string/error"/>

                <Button
                    android:id="@+id/graph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:drawableLeft="@drawable/create_graph"
                    android:text="Graph"/>

                <Button
                    android:id="@+id/state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:drawableLeft="@drawable/state"
                    android:text="@string/state"/>

                <Button
                    android:id="@+id/saveGraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:drawableLeft="@drawable/save"
                    android:text="@string/sgraph"/>

                <Button
                    android:id="@+id/openGraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:drawableLeft="@drawable/open"
                    android:text="@string/ograph"/>

                <Button
                    android:id="@+id/update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:drawableLeft="@drawable/update"
                    android:text="@string/update"/>

                <Button
                    android:drawableLeft="@drawable/show_matrix"
                    android:id="@+id/show_matrix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/showmatrix"/>


            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/clear"
                android:onClick="onClick"
                android:text="@string/clear"/>

            <Button

                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/delete"
                android:onClick="onClick"
                android:text="@string/d_bloc"/>

            <Button
                android:id="@+id/d_linc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/delete_link"
                android:onClick="onClick"
                android:text="@string/d_link"/>

            <Button
                android:id="@+id/settext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/text"
                android:onClick="onClick"
                android:text="@string/text"/>

        </LinearLayout>
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addrect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/rect"
                    android:onClick="onClick"
                    android:text="@string/rect"/>

                <Button
                    android:id="@+id/rhomb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/rhomb"
                    android:onClick="onClick"
                    android:text="@string/rhomb"/>

                <Button
                    android:id="@+id/begin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/oval"
                    android:onClick="onClick"
                    android:text="@string/begin"/>

                <Button
                    android:id="@+id/end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/oval"
                    android:onClick="onClick"
                    android:text="end"/>

                <Button
                    android:id="@+id/line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableBottom="@drawable/link"
                    android:onClick="onClick"
                    android:text="@string/link"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:drawableRight="@drawable/menu"
                        android:onClick="onClick"
                        android:text="@string/menu"/>
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>
    </LinearLayout>

</LinearLayout>
